# tenderclaw

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  _certify.py  openrouter_provider.py.bak  pyproject.toml  repomix-output.xml  skills_out.txt  start.bat  start.sh  tenderclaw-opencode.md  tmp_script.py
.github/workflows/: wave1-ci.yml
backend/: __init__.py  config.py  main.py
backend/agents/: handler.py  registry.py
backend/api/: __init__.py  agents_api.py  analytics_api.py  archive_api.py  bridge_api.py  channels.py  config.py  coordinator_api.py  cost_api.py  diagnostics.py  gateway.py  health.py  history_api.py  keybindings_api.py  keywords_api.py  migrations_api.py  modes_api.py  mvp.py  notifications_api.py  oauth_api.py  ralph_api.py  relay.py  router.py  sdk_api.py  sessions.py  skills_api.py  tools_api.py  ws.py
backend/bridge/: remote_bridge.py
backend/commands/: __init__.py  core.py  registry.py
backend/core/: conversation.py  keyword_detection.py  modes.py  ralph_state.py  (+4 more)
docs/: antigravity.001.md  antigravity.002.md  blueprint-audit.md  claude.001.md  claude.002.md  claude.md  first-release.md  fix-lm-studio.md  implementation_plan.md  oh-my-openagent-porting.md  piano.md  reporto-gpt5-nano.md  sdk.md  tenderclaw.md  tutorial.md
frontend/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
prompts/: architect.md  conductor.md  debugger.md  executor.md  hephaestus.md  librarian.md  looker.md  reviewer.md  scribe.md  strategy.md
shared/: __init__.py  sdk_errors.py  sdk_types.py  sdk_validators.py
test/: test_backend_llamacpp.py  test_direct.py  test_llamacpp.py  test_llamacpp2.py  test_llamacpp3.py  test_llamacpp4.py  test_llamacpp5.py  test_llm_direct.py  test_or.py
tools/: run_wave1_tests.py  wave1_reload_test.py  wave1_restart_simulation.py  wave1_smoke.py
(+317 files in other folders)
