[project]
name = "tenderclaw"
version = "0.1.0"
description = "Multi-agent, multi-model AI coding assistant — the best of Claude Code, oh-my-codex, and oh-my-openagent"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=15.0",

    # Validation & settings
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # AI SDKs (multi-model)
    "anthropic>=0.42.0",
    "openai>=1.50.0",
    "google-genai>=1.0.0",

    # MCP
    "mcp>=1.0.0",

    # Async I/O
    "httpx>=0.28.0",
    "aiofiles>=24.0",

    # Utilities
    "structlog>=24.0",
    "python-dotenv>=1.0",
    "tiktoken>=0.8.0",
    "rich>=13.0",

    # OpenTelemetry
    "opentelemetry-api>=1.25.0",
    "opentelemetry-sdk>=1.25.0",
    "opentelemetry-instrumentation-fastapi>=0.46b0",
    "opentelemetry-exporter-otlp>=1.25.0",

    # JWT
    "PyJWT>=2.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.0",
    "mypy>=1.13",
]

[project.scripts]
tenderclaw = "backend.main:run"

[tool.setuptools.packages.find]
include = ["backend*"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["backend"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["backend"]
markers = [
    "e2e: end-to-end tests that require a running backend and/or frontend (skip with -m 'not e2e')",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_any_explicit = true
